common-applications/control/scan-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: scan-tools
  name: scan-tools
