common-applications/control/scan-tools/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-tools-backend
  namespace: scan-tools
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/infra-common/scan-tools-backend:4b70dd16eb7caa80d00d7c3064b7486703f6d9b9
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - mountPath: /var/log/open-infra
          name: static-log-data
        - mountPath: /var/lib/open-infra
          name: static-lib-data
        - mountPath: /opt/open_infra/open_infra/static
          name: website-statics-data
        - mountPath: /opt/open_infra/open_infra/config/kubeconfig/cluster-kubeconfig
          name: kubeconfig-secret
      volumes:
      - name: static-log-data
        persistentVolumeClaim:
          claimName: cce-evs-log-data
      - name: static-lib-data
        persistentVolumeClaim:
          claimName: cce-evs-lib-data
      - name: website-statics-data
        persistentVolumeClaim:
          claimName: statics-share-volume
      - name: kubeconfig-secret
        secret:
          secretName: kubeconfig-secret
