common-applications/control/scan-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scan-tools-website-service
  namespace: scan-tools
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: scan-tools-backend-service
  namespace: scan-tools
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: backend
  type: ClusterIP
